# SingleNodeOrchestrator

./: .gitignore  README.md
.github/workflows/: release.yml
apps/plex/: README.md  deployment.yaml  service.yaml
backend/: Cargo.toml
backend/src/: config.rs  database.rs  lib.rs  main.rs  metrics.rs  metrics_timeseries.rs
backend/src/routes/: apps.rs  devices.rs  gpus.rs  health.rs  jobs.rs  memory.rs  mod.rs  network.rs  processor.rs  storage_drives.rs  system_summary.rs
frontend/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  app.html
frontend/src/lib/: api.ts  storage.ts
frontend/src/lib/components/: CodeEditor.svelte  UiSection.svelte
frontend/src/routes/: +layout.svelte
frontend/src/routes/apps/: +page.svelte
frontend/src/routes/apps/[id]/: +page.svelte  +page.ts
frontend/src/routes/apps/add-app/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/jobs/: +page.svelte
frontend/src/routes/jobs/[id]/: +page.svelte  +page.ts
frontend/src/routes/jobs/add-job/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/settings/devices/: +page.svelte
frontend/src/routes/settings/helm-repositories/: +page.svelte
frontend/src/routes/storage/: +page.svelte
frontend/src/routes/storage/[id]/: +page.svelte  +page.ts
frontend/src/routes/storage/add-jbod/: +page.svelte
frontend/src/routes/variables/: +page.svelte
frontend/src/routes/variables/add-variable/: +page.svelte
(+1 files in other folders)
